Fix bug always expanding nav on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -231,12 +231,14 @@ nav.navbar {
     top: 0;
     width: 100%;
 
-    & .nav-items {
-      @include nav-is-active;
-    }
-
     & + main {
       padding-top: 6rem;
+    }
+
+    @media screen and (min-width: $breakpoint768) {
+      & .nav-items {
+        @include nav-is-active;
+      }
     }
   }
 
